[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "seven-circumstances"
version = "0.0.2"
authors = [
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"},
]
description = "'Seven circumstances' are the foundation of 'inquisitive semantics'."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/seven-circumstances/seven-circumstances"
"Bug Tracker" = "https://github.com/seven-circumstances/seven-circumstances/issues"